update grid5000.sh